iRedMail-0.9.9:
    * Supports new distribution release:
        + OpenBSD 6.4

    * Improvements:
        + Able to set per-user mailbox format (e.g. mdbox) and mailbox folder
          appended to maildir path in SQL/LDAP.
        + Switch to utf8mb4 as default character set in MySQL.
        + Set file/directory permission to 0400 for dumpped SQL backup files.
        + OpenLDAP log file has been moved to /var/log/openldap/openldap.log
          (was /var/log/openldap.log).

    * Fixed issues:
        + Index ldap attribute `mobile`.
        - Not always specify a plain text footer file for altermime to update
          email sent to mlmmj mailing list.
        + Use accurate Nginx url match for Roundcube.
        - mlmmjadmin:
            - Not set correct owner/group for config file.
            - Not use correct syslog socket path on FreeBSD.
        - SQL backends:
            - Not handle alias domains for relay in Postfix.

    * Updated packages:
        + Roundcube -> 1.3.7
        + iRedAdmin -> 0.9.1
        + iRedAPD -> 2.3
        + mlmmjadmin -> 1.7
        + uwsgi -> 2.0.17.1 (OpenBSD only)

iRedMail-0.9.8:
    * Supports new distribution release:
        + OpenBSD 6.2, 6.3
        + Ubuntu 18.04

    * Dropped distribution releases:
        + RHEL/CentOS 6
        + Ubuntu 14.04 LTS, 17.04
        + Debian 8
        + OpenBSD 6.1

    * Remove components:
        - Apache has been removed, Nginx is the only one web server available.

    * New components:
        + netdata (1.10.0) monitor integration: http://my-netdata.io
          Note: netdata currently works on Linux and FreeBSD, not OpenBSD.

          - Integrate netdata on Linux server:
            https://docs.iredmail.org/integration.netdata.linux.html

          - Integrate netdata on FreeBSD server:
            https://docs.iredmail.org/integration.netdata.freebsd.html

        + Integrate 'mlmmj' mailing list manager, and 'mlmmjadmin' RESTful API